--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_event_map">EventMap</string>
     <string name="event_attending">attending</string>
     <string name="current_place">Current location</string>
+    <string name="title_filter_options">Filter options</string>
 </resources>
