--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="event_attending">attending</string>
     <string name="current_place">Current location</string>
     <string name="title_filter_options">Filter options</string>
+    <string name="no_event_notify">No parties found</string>
 </resources>
