- Icons changed. - Loading progress bar graphic changed. - Starting the main activity now forces the user onto the setting screen, where he can switch on location.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="current_place">Current location</string>
     <string name="title_filter_options">Filter options</string>
     <string name="no_event_notify">No parties found</string>
+    <string name="gps_network_not_enabled">Location not enabled</string>
+    <string name="open_location_settings">Open location settings</string>
+    <string name="Cancel">Cancel</string>
 </resources>
