--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">PartyKalauz</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_event_view">EventView</string>
-    <string name="title_activity_calendar_view">Choose a date</string>
+    <string name="title_activity_calendar_view">Filtering Options</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_event_map">EventMap</string>
